--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -3,3 +3,4 @@
 @import "./line-height/index.scss";
 @import "./font-size/index.scss";
 @import "./font-weight/index.scss";
+@import "./display-flex/index.scss"
