create flex styles

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -3,4 +3,5 @@
 @import "./line-height/index.scss";
 @import "./font-size/index.scss";
 @import "./font-weight/index.scss";
-@import "./display-flex/index.scss"
+@import "./flex/index.scss";
+@import "./flex/gap/index.scss";
