--- a/src/assets/style/font-weight/font-weight.scss
+++ b/src/assets/style/font-weight/font-weight.scss
@@ -1,15 +1,15 @@
 :root {
     // FONT WEIGHT
-    .w-light {
+    .fw-light {
         font-weight: var(--bb-weight-light);
     }
-    .w-regular {
+    .fw-regular {
         font-weight: var(--bb-weight-regular);
     }
-    .w-medium {
+    .fw-medium {
         font-weight: var(--bb-weight-medium);
     }
-    .w-bold {
+    .fw-bold {
         font-weight: var(--bb-weight-bold);
     }
 }
